1.15 - beperkt tot android versie 4.0 en hoger - diverse opmaak zaken gecorrigeerd en verbeterd